--- a/cv02/Lab_02_task.ipynb
+++ b/cv02/Lab_02_task.ipynb
@@ -492,14 +492,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 91,
    "metadata": {
     "id": "MO3gSHiMK-iq"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 0 0 0 0 0 0 0 0 0 0 1 0 0 0 1 1 0 0 0 1 1 1 1 1 1 1 1 1 1 1 2 1 1 1 1 1\n",
+      " 1 1 1 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2]\n"
+     ]
+    }
+   ],
    "source": [
     "def assign_centroids(distances: np.array) -> np.array:\n",
-    "    return np.array([])"
+    "    return np.argmin(distances, axis=0)\n",
+    "\n",
+    "ass_2_cents = assign_centroids(dists)\n",
+    "print(ass_2_cents)\n"
    ]
   },
   {
