--- a/cv02/Lab_02_task.ipynb
+++ b/cv02/Lab_02_task.ipynb
@@ -523,12 +523,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 99,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "552.5774725721202\n"
+     ]
+    }
+   ],
    "source": [
     "def calculate_objective(cluster_belongs: np.array, distances: np.array) -> np.array:\n",
-    "    return np.array([])"
+    "    distances = distances.T\n",
+    "    selected_min = distances[np.arange(len(distances)), cluster_belongs]\n",
+    "    return np.sum(selected_min)\n",
+    "\n",
+    "J = calculate_objective(ass_2_cents, dists)\n",
+    "print(J)"
    ]
   },
   {
@@ -542,14 +555,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 100,
    "metadata": {
     "id": "veCrqX7CK-iq"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 2.05594624  2.29880528]\n",
+      " [ 6.46539291  6.99388126]\n",
+      " [11.9657913  12.30139639]]\n"
+     ]
+    }
+   ],
    "source": [
     "def calculate_new_centroids(points: np.array, clusters_belongs: np.array, n_of_clusters: int) -> np.array:\n",
-    "    return np.array([])"
+    "    new_clusters = []\n",
+    "    for cluster_id in range(n_of_clusters):\n",
+    "        j = np.where(clusters_belongs == cluster_id)\n",
+    "        points_sel = points[j]\n",
+    "        new_clusters.append(np.mean(points_sel, axis=0))\n",
+    "    return np.array(new_clusters)\n",
+    "\n",
+    "new_cents = calculate_new_centroids(points, ass_2_cents, k)\n",
+    "print(new_cents)"
    ]
   },
   {
