--- a/cv04/Copy_of_MPA_MLF_PCA_2_students.ipynb
+++ b/cv04/Copy_of_MPA_MLF_PCA_2_students.ipynb
@@ -18,7 +18,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 11,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -31,8 +31,8 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "[[1.80720735 1.27357371 0.        ]\n",
-            " [4.08528566 2.87897923 0.        ]]\n"
+            "[[2. 1. 0.]\n",
+            " [4. 3. 0.]]\n"
           ]
         }
       ],
@@ -41,17 +41,23 @@
         "# Defined 3 points in 2D-space:\n",
         "X=np.array([[2, 1, 0],[4, 3, 0]])\n",
         "# Calculate the covariance matrix:\n",
-        "\n",
+        "R = np.matmul(X, X.T)/3     # /3 - normalization\n",
+        "#print(R)\n",
         "# Calculate the SVD decomposition and new basis vectors:\n",
         "[U,D,V]=np.linalg.svd(R)  # call SVD decomposition\n",
         "u1=U[:,0] # new basis vectors\n",
         "u2=U[:,1]\n",
         "\n",
         "# Calculate the coordinates in new orthonormal basis:\n",
+        "xi1 = np.matmul(np.transpose(X), u1)\n",
+        "xi2 = np.matmul(np.transpose(X), u2)\n",
+        "#print(xi1)\n",
+        "#print(xi2)\n",
         "\n",
         "# Calculate the approximation of the original from new basis\n",
         "#print(Xi1[:,None]) # add second dimention to array and test it\n",
-        "\n",
+        "Xaprox = np.matmul(u1[:, None], xi1[None, :]) + np.matmul(u2[:, None], xi2[None, :])\n",
+        "print(Xaprox)\n",
         "\n",
         "# Check that you got the original\n"
       ]
@@ -318,11 +324,26 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "Python 3",
+      "display_name": "Python 3.11.1 64-bit",
+      "language": "python",
       "name": "python3"
     },
     "language_info": {
-      "name": "python"
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.11.1"
+    },
+    "vscode": {
+      "interpreter": {
+        "hash": "cec67de7ed1af046cb0ae7cbe7b5cd93a88ec535ba30a548bda7a5254b2089e3"
+      }
     }
   },
   "nbformat": 4,
